
build-backend = "setuptools.build_meta"

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.7.0",
]

[tool.cibuildwheel]
before-all = [

    "git clone --depth 1 --branch v0.1 https://github.com/joan2937/lg",
    "cd lg",
    "make && sudo make install",

    "sudo ldconfig",
    "sudo chown -R $USER:$USER /home/runner/work",

    "git clone https://github.com/endail/hx711",
    "cd hx711",
    "make && sudo make install"

]

